# nasm-console-snake

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  run.bat  run.py
doc/: BUILD.md  CONVENTION.md  calling_convention.md  usage.md
docs/: BUILD.md
include/: callclib.inc  callclib_argc.inc  stdcall.inc
include/anrc/: _callclib_argc.internal.inc  _clib_consts.internal.inc
include/anrc_callclib/: callclib.inc  callclib_argc.inc  clib.inc
include/game/: static_strings.inc
include/styling/: _macro_utils.internal.inc  ansi.inc
include/types/: wchar.inc
lib/anrc/: _clib_consts.internal.txt  _clib_funcs.internal.txt  _link_clib.internal.cpp  all  callclib.inc  callclib.nasm  callclib_argc.inc
lib/argparse/: DEPENDENCIES.list  _args_container.internal.inc  all  args_container.inc  option_list_builder.inc  parser.inc  parser.nasm
lib/memutils/: all
lib/strutils/: all  comparison.nasm  properties.nasm  search.nasm  string.inc
lib/styling/: all  ansi.inc
src/: DEPENDENCIES.list  callclib.nasm  cli_options.nasm  config.nasm  main.nasm  qrgen.nasm  snake.nasm  static_strings.nasm  stdcall.nasm
src/anrc_callclib/: _link_clib.internal.cpp  callclib.nasm  link_clib.cpp
src/include/: config.inc  main.inc  qrgen.inc  static_strings.inc
tools/: run.bat  run.py  run.sh
